# jot

./: .env.e2e.example  .gitignore  ARCHITECTURE.md  ATTACHMENTS_SPIKE.md  EMAIL_TEMPLATES.md  README.md  REFACTOR_SUMMARY.md  RELEASE.md  ROADMAP.md  auth-harness.html  index.html  local-db-harness.html  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  vite.config.ts
.github/workflows/: release.yml
android-widget/: AndroidManifest_additions.xml  README.md  SETUP_CHECKLIST.md
android-widget/res/drawable/: capture_button_bg.xml  capture_field_bg.xml  dot.xml  ic_mic.xml  widget_background.xml
android-widget/res/layout/: widget_pulse.xml  widget_quick_capture.xml
docs/: confirmed.html  index.html
scripts/: local-supabase-env.mjs  seed-local-test-data.mjs  sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: defaults.json
src-tauri/icons/: icon.icns
src-tauri/keys/: update.key.pub
src-tauri/src/: lib.rs  main.rs  widget_sync.rs
src/components/: CreateTask.tsx  LogbookRow.tsx  TaskDetail.tsx  TaskRow.tsx
src/controllers/: README.md
src/controllers/tasks/: README.md  saveCreateTask.controller.ts
src/hooks/: README.md  useAuth.tsx
src/lib/: auth.tsx  nlp.ts  nlpSettings.ts  supabase.ts  tasks.ts  theme.ts  widgetSync.ts
src/mobile/: MobileApp.tsx
src/models/: README.md
src/models/shared/: README.md
src/models/tasks/: README.md  taskCreation.ts  taskPresentation.ts  taskVisibility.ts
src/router/: README.md
src/services/: README.md
src/services/backend/: README.md  supabase.service.ts
src/services/capture/: README.md  nlp.service.ts  (+1 more)
src/store/: README.md
src/styles/: global.css
src/test-harness/: authScreen.tsx  localDbSmoke.tsx
src/types/: index.ts
src/utils/: README.md
src/views/: README.md
src/windows/: AboutWindow.tsx  Dashboard.tsx  Preferences.tsx  QuickCapture.tsx  ReminderWindow.tsx
supabase/: config.toml  seed.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260401000000_core_schema.sql  20260405000000_rls_and_area_id.sql  20260425000000_projects_require_area.sql  20260427000000_collaboration_mvp.sql  20260428000000_collaboration_fix.sql  20260428194000_create_area_rpc.sql
tests/: nlp-natural.test.ts  nlp.test.ts
tests/e2e/: README.md  auth-screen.spec.ts  local-db.local.spec.ts
(+53 files in other folders)
