[package]
name = "jot"
version = "0.1.0"
description = "Jot — fast, keyboard-driven todo app"
authors = []
edition = "2021"

[lib]
name = "jot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
