[package]
name = "jot"
version = "0.4.0"
description = "Jot — fast, keyboard-driven todo app"
authors = []
edition = "2021"

[lib]
name = "jot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
