[package]
name = "jot"
version = "1.0.1"
description = "Jot — fast, keyboard-driven todo app"
authors = []
edition = "2021"

[lib]
name = "jot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Shared dependencies (all platforms) ──────────────────────────────────────
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

# ── Desktop-only dependencies ─────────────────────────────────────────────────
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
window-vibrancy = "0.7"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
custom-protocol = ["tauri/custom-protocol"]
